--- a/KaveNegarApi/KaveNegarApi.csproj
+++ b/KaveNegarApi/KaveNegarApi.csproj
@@ -3,11 +3,19 @@
 	<PropertyGroup>
 		<TargetFramework>netstandard2.1</TargetFramework>
 		<Nullable>enable</Nullable>
-		<Version>1.0.0</Version>
+		<Version>1.0.1</Version>
 		<Authors>Ali Momeni</Authors>
 		<Company>Vira develop</Company>
+		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 		<PackageProjectUrl>https://Viradevelop.com</PackageProjectUrl>
 	</PropertyGroup>
+
+	<PropertyGroup>
+		<PackageReadmeFile>README.md</PackageReadmeFile>
+	</PropertyGroup>
+	<ItemGroup>
+		<None Include="README.md" Pack="true" PackagePath="\"/>
+	</ItemGroup>
 
 	<ItemGroup>
 		<PackageReference Include="kavenegar" Version="1.2.4" />
